--- a/.github/workflows/deploy-infra-and-apps.yml
+++ b/.github/workflows/deploy-infra-and-apps.yml
@@ -1,8 +1,12 @@
-on: [push, workflow_dispatch]
+on: 
+  push: 
+    tags:
+      - "*.*.*"
+  workflow_dispatch:
 
 permissions:
   id-token: write 
-  
+
 env: 
   AZURE_RG_NAME: ${{ vars.PROJECT_NAME }}-rg-${{ vars.AZURE_RESOURCE_IDENTIFIER }}
   
